fix modal header close button getting covered by the title

--- a/app/assets/stylesheets/tenon/ui/modals.css.scss
+++ b/app/assets/stylesheets/tenon/ui/modals.css.scss
@@ -82,22 +82,25 @@
 }
 
 .modal-header {
-  padding: 15px;
-  border-bottom: 1px solid $tn-med-grey;
+  padding: 0;
   background: #fff;
+  height: 50px;
 }
 
 .modal-header .close {
-  margin-top: -10px;
   font-size: 40px;
+  height: 100%;
+  width: 50px;
 }
 
 .modal-title {
-  margin: 0;
+  padding: 15px;
+  margin-right: 50px;
   color: $tn-label;
   font-weight: normal;
   font-size: 24px;
-  line-height: 18px;
+  line-height: 20px;
+  background-color: #fff;
 }
 
 .modal-body {
